# Copyright (C) 2008-2012 TrinityCore <http://www.trinitycore.org/>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

if (USE_SCRIPTPCH)
  set(Kalimdor_STAT_PCH_HDR PrecompiledHeaders/KalimdorPCH.h)
  set(Kalimdor_STAT_PCH_SRC PrecompiledHeaders/KalimdorPCH.cpp)
endif ()

set(Kalimdor_STAT_SRCS
  ${Kalimdor_STAT_SRCS}
  ../../game/AI/ScriptedAI/ScriptedEscortAI.cpp
  ../../game/AI/ScriptedAI/ScriptedCreature.cpp
  ../../game/AI/ScriptedAI/ScriptedFollowerAI.cpp
  stonetalon_mountains.cpp
  silithus.cpp
  moonglade.cpp
  RazorfenDowns/razorfen_downs.cpp
  RazorfenDowns/instance_razorfen_downs.cpp
  RazorfenDowns/boss_amnennar_the_coldbringer.cpp
  RazorfenDowns/razorfen_downs.h
  ZulFarrak/zulfarrak.h
  ZulFarrak/zulfarrak.cpp
  ZulFarrak/instance_zulfarrak.cpp
  CavernsOfTime/EscapeFromDurnholdeKeep/boss_epoch_hunter.cpp
  CavernsOfTime/EscapeFromDurnholdeKeep/old_hillsbrad.h
  CavernsOfTime/EscapeFromDurnholdeKeep/boss_leutenant_drake.cpp
  CavernsOfTime/EscapeFromDurnholdeKeep/old_hillsbrad.cpp
  CavernsOfTime/EscapeFromDurnholdeKeep/instance_old_hillsbrad.cpp
  CavernsOfTime/EscapeFromDurnholdeKeep/boss_captain_skarloc.cpp
  CavernsOfTime/WellofEternity/boss_mannoroth.cpp
  CavernsOfTime/WellofEternity/boss_perotharn.cpp
  CavernsOfTime/WellofEternity/boss_queen_azshara.cpp
  CavernsOfTime/WellofEternity/boss_varothen.cpp
  CavernsOfTime/WellofEternity/instance_well_of_eternity.cpp
  CavernsOfTime/WellofEternity/well_of_eternity.h
  CavernsOfTime/HourofTwilight/boss_arcurion.cpp
  CavernsOfTime/HourofTwilight/boss_asira_dawnslayer.cpp
  CavernsOfTime/HourofTwilight/boss_archbishop_benedictus.cpp
  CavernsOfTime/HourofTwilight/instance_hour_of_twilight.cpp
  CavernsOfTime/HourofTwilight/hour_of_twilight.cpp
  CavernsOfTime/HourofTwilight/hour_of_twilight.h
  CavernsOfTime/BattleForMountHyjal/boss_archimonde.cpp
  CavernsOfTime/BattleForMountHyjal/hyjalAI.h
  CavernsOfTime/BattleForMountHyjal/hyjal_trash.h
  CavernsOfTime/BattleForMountHyjal/boss_kazrogal.cpp
  CavernsOfTime/BattleForMountHyjal/hyjal_trash.cpp
  CavernsOfTime/BattleForMountHyjal/hyjal.cpp
  CavernsOfTime/BattleForMountHyjal/hyjalAI.cpp
  CavernsOfTime/BattleForMountHyjal/instance_hyjal.cpp
  CavernsOfTime/BattleForMountHyjal/boss_rage_winterchill.cpp
  CavernsOfTime/BattleForMountHyjal/hyjal.h
  CavernsOfTime/BattleForMountHyjal/boss_azgalor.cpp
  CavernsOfTime/BattleForMountHyjal/boss_anetheron.cpp
  CavernsOfTime/CullingOfStratholme/boss_infinite.cpp
  CavernsOfTime/CullingOfStratholme/boss_salramm.cpp
  CavernsOfTime/CullingOfStratholme/boss_meathook.cpp
  CavernsOfTime/CullingOfStratholme/boss_mal_ganis.cpp
  CavernsOfTime/CullingOfStratholme/boss_epoch.cpp
  CavernsOfTime/CullingOfStratholme/culling_of_stratholme.cpp
  CavernsOfTime/CullingOfStratholme/instance_culling_of_stratholme.cpp
  CavernsOfTime/CullingOfStratholme/culling_of_stratholme.h
  CavernsOfTime/DarkPortal/dark_portal.h
  CavernsOfTime/DarkPortal/instance_dark_portal.cpp
  CavernsOfTime/DarkPortal/boss_chrono_lord_deja.cpp
  CavernsOfTime/DarkPortal/dark_portal.cpp
  CavernsOfTime/DarkPortal/boss_aeonus.cpp
  CavernsOfTime/DarkPortal/boss_temporus.cpp
  CavernsOfTime/DragonSoul/boss_morchok.cpp
  CavernsOfTime/DragonSoul/boss_yorsahj_the_unsleeping.cpp
  CavernsOfTime/DragonSoul/boss_warlord_zonozz.cpp
  CavernsOfTime/DragonSoul/boss_hagara.cpp
  CavernsOfTime/DragonSoul/boss_ultraxion.cpp
  CavernsOfTime/DragonSoul/boss_warmaster_blackhorn.cpp
  CavernsOfTime/DragonSoul/boss_spine_of_deathwing.cpp
  CavernsOfTime/DragonSoul/boss_madness_of_deathwing.cpp
  CavernsOfTime/DragonSoul/boss_warmaster_blackhorn.h
  CavernsOfTime/DragonSoul/instance_dragon_soul.cpp
  CavernsOfTime/DragonSoul/dragon_soul.cpp
  CavernsOfTime/DragonSoul/dragon_soul.h
  CavernsOfTime/EndTime/boss_echo_of_tyrande.cpp
  CavernsOfTime/EndTime/boss_echo_of_baine.cpp
  CavernsOfTime/EndTime/boss_echo_of_sylvanas.cpp
  CavernsOfTime/EndTime/boss_echo_of_jaina.cpp
  CavernsOfTime/EndTime/boss_murozond.cpp
  CavernsOfTime/EndTime/instance_end_time.cpp
  CavernsOfTime/EndTime/end_time.cpp
  CavernsOfTime/EndTime/end_time.h
  Firelands/boss_shannox.cpp
  Firelands/boss_lord_rhyolith.cpp
  Firelands/boss_lord_rhyolith.h
  Firelands/boss_bethtilac.cpp
  Firelands/boss_alysrazor.cpp
  Firelands/boss_baleroc.cpp
  Firelands/boss_majordomo_staghelm.cpp
  Firelands/boss_ragnaros_firelands.cpp
  Firelands/boss_ragnaros_firelands.h
  Firelands/instance_firelands.cpp
  Firelands/firelands.cpp
  Firelands/firelands.h
  HallsOfOrigination/boss_temple_guardian_anhuur.cpp
  HallsOfOrigination/boss_earthrager_ptah.cpp
  HallsOfOrigination/boss_anraphet.cpp
  HallsOfOrigination/boss_ammunae.cpp
  HallsOfOrigination/boss_setesh.cpp
  HallsOfOrigination/boss_isiset.cpp
  HallsOfOrigination/boss_rajh.cpp
  HallsOfOrigination/instance_halls_of_origination.cpp
  HallsOfOrigination/halls_of_origination.cpp
  HallsOfOrigination/halls_of_origination.h 
  LostCityOfTheTolvir/boss_general_husam.cpp
  LostCityOfTheTolvir/boss_lockmaw_augh.cpp
  LostCityOfTheTolvir/boss_high_prophet_barim.cpp
  LostCityOfTheTolvir/boss_siamat.cpp
  LostCityOfTheTolvir/instance_lost_city_of_the_tolvir.cpp
  LostCityOfTheTolvir/lost_city_of_the_tolvir.cpp
  LostCityOfTheTolvir/lost_city_of_the_tolvir.h 
  BlackfathomDeeps/boss_kelris.cpp
  BlackfathomDeeps/instance_blackfathom_deeps.cpp
  BlackfathomDeeps/boss_gelihast.cpp
  BlackfathomDeeps/blackfathom_deeps.cpp
  BlackfathomDeeps/boss_aku_mai.cpp
  BlackfathomDeeps/blackfathom_deeps.h
  azuremyst_isle.cpp
  orgrimmar.cpp
  desolace.cpp
  feralas.cpp
  Maraudon/boss_princess_theradras.cpp
  Maraudon/boss_landslide.cpp
  Maraudon/boss_celebras_the_cursed.cpp
  Maraudon/boss_noxxion.cpp
  Maraudon/instance_maraudon.cpp
  TempleOfAhnQiraj/boss_fankriss.cpp
  TempleOfAhnQiraj/boss_huhuran.cpp
  TempleOfAhnQiraj/instance_temple_of_ahnqiraj.cpp
  TempleOfAhnQiraj/mob_anubisath_sentinel.cpp
  TempleOfAhnQiraj/boss_viscidus.cpp
  TempleOfAhnQiraj/boss_twinemperors.cpp
  TempleOfAhnQiraj/boss_sartura.cpp
  TempleOfAhnQiraj/boss_cthun.cpp
  TempleOfAhnQiraj/temple_of_ahnqiraj.h
  TempleOfAhnQiraj/boss_skeram.cpp
  TempleOfAhnQiraj/boss_ouro.cpp
  TempleOfAhnQiraj/boss_bug_trio.cpp
  TheVortexPinnacle/boss_grand_vizier_ertan.cpp
  TheVortexPinnacle/boss_altairus.cpp
  TheVortexPinnacle/boss_asaad.cpp
  TheVortexPinnacle/instance_the_vortex_pinnacle.cpp
  TheVortexPinnacle/the_vortex_pinnacle.cpp
  TheVortexPinnacle/the_vortex_pinnacle.h
  darkshore.cpp
  RuinsOfAhnQiraj/boss_buru.cpp
  RuinsOfAhnQiraj/instance_ruins_of_ahnqiraj.cpp
  RuinsOfAhnQiraj/boss_rajaxx.cpp
  RuinsOfAhnQiraj/boss_ossirian.cpp
  RuinsOfAhnQiraj/boss_ayamiss.cpp
  RuinsOfAhnQiraj/boss_moam.cpp
  RuinsOfAhnQiraj/ruins_of_ahnqiraj.h
  RuinsOfAhnQiraj/boss_kurinnaxx.cpp
  mulgore.cpp
  bloodmyst_isle.cpp
  thunder_bluff.cpp
  azshara.cpp
  RazorfenKraul/razorfen_kraul.h
  RazorfenKraul/instance_razorfen_kraul.cpp
  RazorfenKraul/razorfen_kraul.cpp
  the_barrens.cpp
  ungoro_crater.cpp
  WailingCaverns/wailing_caverns.h
  WailingCaverns/instance_wailing_caverns.cpp
  WailingCaverns/wailing_caverns.cpp
  durotar.cpp
  felwood.cpp
  tanaris.cpp
  dustwallow_marsh.cpp
  winterspring.cpp
  thousand_needles.cpp
  ashenvale.cpp
  teldrassil.cpp
  OnyxiasLair/boss_onyxia.cpp
  OnyxiasLair/onyxias_lair.h
  OnyxiasLair/instance_onyxias_lair.cpp
  ThroneOfTheFourWinds/instance_throne_of_the_four_winds.cpp
  ThroneOfTheFourWinds/boss_alakir.cpp
  ThroneOfTheFourWinds/boss_conclave_of_wind.cpp
  ThroneOfTheFourWinds/throne_of_the_four_winds.cpp
  ThroneOfTheFourWinds/throne_of_the_four_winds.h
)

include_directories(
  ${CMAKE_BINARY_DIR}
  ${CMAKE_SOURCE_DIR}/dep
  ${CMAKE_SOURCE_DIR}/dep/cds
  ${CMAKE_SOURCE_DIR}/dep/cppformat
  ${CMAKE_SOURCE_DIR}/dep/recastnavigation/Detour
  ${CMAKE_SOURCE_DIR}/dep/recastnavigation/Detour/Include
  ${CMAKE_SOURCE_DIR}/dep/recastnavigation/Recast
  ${CMAKE_SOURCE_DIR}/dep/recastnavigation/Recast/Include
  ${CMAKE_SOURCE_DIR}/dep/g3dlite/include
  ${CMAKE_SOURCE_DIR}/dep/SFMT
  ${CMAKE_SOURCE_DIR}/dep/zlib
  ${CMAKE_SOURCE_DIR}/src/server/shared
  ${CMAKE_SOURCE_DIR}/src/server/shared/Configuration
  ${CMAKE_SOURCE_DIR}/src/server/shared/Cryptography
  ${CMAKE_SOURCE_DIR}/src/server/shared/Database
  ${CMAKE_SOURCE_DIR}/src/server/shared/DataStores
  ${CMAKE_SOURCE_DIR}/src/server/shared/Debugging
  ${CMAKE_SOURCE_DIR}/src/server/shared/Dynamic/LinkedReference
  ${CMAKE_SOURCE_DIR}/src/server/shared/Dynamic
  ${CMAKE_SOURCE_DIR}/src/server/shared/Logging
  ${CMAKE_SOURCE_DIR}/src/server/shared/Packets
  ${CMAKE_SOURCE_DIR}/src/server/shared/Threading
  ${CMAKE_SOURCE_DIR}/src/server/shared/Utilities
  ${CMAKE_SOURCE_DIR}/src/server/ipc
  ${CMAKE_SOURCE_DIR}/src/server/collision
  ${CMAKE_SOURCE_DIR}/src/server/collision/Management
  ${CMAKE_SOURCE_DIR}/src/server/collision/Models
  ${CMAKE_SOURCE_DIR}/src/server/collision/Maps
  ${CMAKE_SOURCE_DIR}/src/server/shared
  ${CMAKE_SOURCE_DIR}/src/server/shared/Database
  ${CMAKE_SOURCE_DIR}/src/server/game/Accounts
  ${CMAKE_SOURCE_DIR}/src/server/game/Anticheat
  ${CMAKE_SOURCE_DIR}/src/server/game/Achievements
  ${CMAKE_SOURCE_DIR}/src/server/game/Addons
  ${CMAKE_SOURCE_DIR}/src/server/game/AI
  ${CMAKE_SOURCE_DIR}/src/server/game/AI/CoreAI
  ${CMAKE_SOURCE_DIR}/src/server/game/AI/ScriptedAI
  ${CMAKE_SOURCE_DIR}/src/server/game/AI/SmartScripts
  ${CMAKE_SOURCE_DIR}/src/server/game/AuctionHouse
  ${CMAKE_SOURCE_DIR}/src/server/game/Battlefield
  ${CMAKE_SOURCE_DIR}/src/server/game/Battlefield/Zones
  ${CMAKE_SOURCE_DIR}/src/server/game/Battlegrounds
  ${CMAKE_SOURCE_DIR}/src/server/game/Battlegrounds/Zones
  ${CMAKE_SOURCE_DIR}/src/server/game/BattlePet
  ${CMAKE_SOURCE_DIR}/src/server/game/BattlePay
  ${CMAKE_SOURCE_DIR}/src/server/game/BrawlersGuild
  ${CMAKE_SOURCE_DIR}/src/server/game/Calendar
  ${CMAKE_SOURCE_DIR}/src/server/game/Challenge
  ${CMAKE_SOURCE_DIR}/src/server/game/Chat
  ${CMAKE_SOURCE_DIR}/src/server/game/Chat/Channels
  ${CMAKE_SOURCE_DIR}/src/server/game/Conditions
  ${CMAKE_SOURCE_DIR}/src/server/shared/Configuration
  ${CMAKE_SOURCE_DIR}/src/server/game/Combat
  ${CMAKE_SOURCE_DIR}/src/server/game/DataStores
  ${CMAKE_SOURCE_DIR}/src/server/game/DungeonFinding
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/AreaTrigger
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Conversation
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Corpse
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Creature
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/DynamicObject
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/EventObject
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Item
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Item/Container
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/GameObject
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Object
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Object/Updates
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Pet
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Player
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Transport
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Unit
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Vehicle
  ${CMAKE_SOURCE_DIR}/src/server/game/Events
  ${CMAKE_SOURCE_DIR}/src/server/game/Globals
  ${CMAKE_SOURCE_DIR}/src/server/game/Grids
  ${CMAKE_SOURCE_DIR}/src/server/game/Grids/Cells
  ${CMAKE_SOURCE_DIR}/src/server/game/Grids/Notifiers
  ${CMAKE_SOURCE_DIR}/src/server/game/Groups
  ${CMAKE_SOURCE_DIR}/src/server/game/Guilds
  ${CMAKE_SOURCE_DIR}/src/server/game/Handlers
  ${CMAKE_SOURCE_DIR}/src/server/game/Instances
  ${CMAKE_SOURCE_DIR}/src/server/game/Loot
  ${CMAKE_SOURCE_DIR}/src/server/game/Mails
  ${CMAKE_SOURCE_DIR}/src/server/game/Miscellaneous
  ${CMAKE_SOURCE_DIR}/src/server/game/Maps
  ${CMAKE_SOURCE_DIR}/src/server/game/Movement
  ${CMAKE_SOURCE_DIR}/src/server/game/Movement/MovementGenerators
  ${CMAKE_SOURCE_DIR}/src/server/game/Movement/Spline
  ${CMAKE_SOURCE_DIR}/src/server/game/Movement/Waypoints
  ${CMAKE_SOURCE_DIR}/src/server/game/OutdoorPvP
  ${CMAKE_SOURCE_DIR}/src/server/game/Pools
  ${CMAKE_SOURCE_DIR}/src/server/game/PrecompiledHeaders
  ${CMAKE_SOURCE_DIR}/src/server/game/Quests
  ${CMAKE_SOURCE_DIR}/src/server/game/Reputation
  ${CMAKE_SOURCE_DIR}/src/server/game/Scenarios  
  ${CMAKE_SOURCE_DIR}/src/server/game/Scripting
  ${CMAKE_SOURCE_DIR}/src/server/game/Server
  ${CMAKE_SOURCE_DIR}/src/server/game/Server/Protocol
  ${CMAKE_SOURCE_DIR}/src/server/game/Skills
  ${CMAKE_SOURCE_DIR}/src/server/game/Spells
  ${CMAKE_SOURCE_DIR}/src/server/game/Spells/Auras
  ${CMAKE_SOURCE_DIR}/src/server/game/Texts
  ${CMAKE_SOURCE_DIR}/src/server/game/Tickets
  ${CMAKE_SOURCE_DIR}/src/server/game/Tools
  ${CMAKE_SOURCE_DIR}/src/server/game/Warden
  ${CMAKE_SOURCE_DIR}/src/server/game/Warden/Modules
  ${CMAKE_SOURCE_DIR}/src/server/game/Weather
  ${CMAKE_SOURCE_DIR}/src/server/game/World
  ${CMAKE_CURRENT_SOURCE_DIR}/PrecompiledHeaders
  ${MYSQL_INCLUDE_DIR}
  ${OPENSSL_INCLUDE_DIR}
)

add_library(Kalimdor STATIC
  ${Kalimdor_STAT_SRCS}
  ${Kalimdor_STAT_PCH_SRC}
)

set_target_properties(Kalimdor PROPERTIES LINKER_LANGUAGE CXX)

message("  -> Prepared: Kalimdor")

# Generate precompiled header
if (USE_SCRIPTPCH)
  add_cxx_pch(Kalimdor ${Kalimdor_STAT_PCH_HDR} ${Kalimdor_STAT_PCH_SRC})
endif()
